syntax = "proto3";

package api.user.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "om-platform/pkg/utils/pagination/v1";

option go_package = "om-platform/api/user/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.service.v1";

// 会话管理服务
// 提供更细粒度的会话管理功能，与AuthService配合使用
service SessionService {
  // 创建会话
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse) {}
  
  // 获取会话详情
  rpc GetSession (GetSessionRequest) returns (SessionInfo) {}
  
  // 更新会话
  rpc UpdateSession (UpdateSessionRequest) returns (google.protobuf.Empty) {}
  
  // 删除会话
  rpc DeleteSession (DeleteSessionRequest) returns (google.protobuf.Empty) {}
  
  // 查询会话列表
  rpc ListSessions (ListSessionsRequest) returns (ListSessionsResponse) {}
  
  // 验证会话有效性
  rpc ValidateSession (ValidateSessionRequest) returns (ValidateSessionResponse) {}
  
  // 延长会话有效期
  rpc ExtendSession (ExtendSessionRequest) returns (ExtendSessionResponse) {}
  
  // 获取会话统计信息
  rpc GetSessionStats (GetSessionStatsRequest) returns (GetSessionStatsResponse) {}
  
  // 强制终止会话
  rpc ForceTerminateSession (ForceTerminateSessionRequest) returns (google.protobuf.Empty) {}
  
  // 批量终止会话
  rpc BatchTerminateSessions (BatchTerminateSessionsRequest) returns (BatchTerminateSessionsResponse) {}
  
  // 获取会话活动日志
  rpc GetSessionActivityLogs (GetSessionActivityLogsRequest) returns (GetSessionActivityLogsResponse) {}
  
  // 设置会话属性
  rpc SetSessionAttribute (SetSessionAttributeRequest) returns (google.protobuf.Empty) {}
  
  // 获取会话属性
  rpc GetSessionAttribute (GetSessionAttributeRequest) returns (GetSessionAttributeResponse) {}
  
  // 删除会话属性
  rpc DeleteSessionAttribute (DeleteSessionAttributeRequest) returns (google.protobuf.Empty) {}
}

// 创建会话请求
message CreateSessionRequest {
  uint32 user_id = 1; // 用户ID
  string client_ip = 2; // 客户端IP
  string user_agent = 3; // 用户代理
  string device_info = 4; // 设备信息
  string session_type = 5; // 会话类型(WEB/MOBILE/API/CLI)
  uint32 tenant_id = 6; // 租户ID
  map<string, string> metadata = 7; // 元数据
  uint32 ttl = 8; // 生存时间(秒)
}

// 创建会话响应
message CreateSessionResponse {
  string session_id = 1; // 会话ID
  google.protobuf.Timestamp created_at = 2; // 创建时间
  google.protobuf.Timestamp expires_at = 3; // 过期时间
  string token = 4; // 会话令牌
}

// 获取会话请求
message GetSessionRequest {
  string session_id = 1; // 会话ID
}

// 会话信息
message SessionInfo {
  string session_id = 1; // 会话ID
  uint32 user_id = 2; // 用户ID
  string username = 3; // 用户名
  string client_ip = 4; // 客户端IP
  string user_agent = 5; // 用户代理
  string device_info = 6; // 设备信息
  string session_type = 7; // 会话类型
  uint32 tenant_id = 8; // 租户ID
  string tenant_name = 9; // 租户名称
  google.protobuf.Timestamp created_at = 10; // 创建时间
  google.protobuf.Timestamp last_activity_at = 11; // 最后活动时间
  google.protobuf.Timestamp expires_at = 12; // 过期时间
  bool is_active = 13; // 是否活跃
  map<string, string> metadata = 14; // 元数据
  repeated string permissions = 15; // 权限列表
  repeated string roles = 16; // 角色列表
}

// 更新会话请求
message UpdateSessionRequest {
  string session_id = 1; // 会话ID
  map<string, string> metadata = 2; // 元数据
  uint32 ttl = 3; // 生存时间(秒)
}

// 删除会话请求
message DeleteSessionRequest {
  string session_id = 1; // 会话ID
}

// 查询会话列表请求
message ListSessionsRequest {
  pagination.PagingRequest paging = 1; // 分页请求
  uint32 user_id = 2; // 用户ID(可选)
  uint32 tenant_id = 3; // 租户ID(可选)
  string session_type = 4; // 会话类型(可选)
  bool active_only = 5; // 仅活跃会话
  google.protobuf.Timestamp start_time = 6; // 开始时间
  google.protobuf.Timestamp end_time = 7; // 结束时间
}

// 查询会话列表响应
message ListSessionsResponse {
  pagination.PagingResponse paging = 1; // 分页响应
  repeated SessionInfo sessions = 2; // 会话列表
}

// 验证会话有效性请求
message ValidateSessionRequest {
  string session_id = 1; // 会话ID
  string token = 2; // 会话令牌
}

// 验证会话有效性响应
message ValidateSessionResponse {
  bool valid = 1; // 是否有效
  string reason = 2; // 无效原因
  SessionInfo session = 3; // 会话信息
}

// 延长会话有效期请求
message ExtendSessionRequest {
  string session_id = 1; // 会话ID
  uint32 ttl = 2; // 延长时间(秒)
}

// 延长会话有效期响应
message ExtendSessionResponse {
  google.protobuf.Timestamp new_expires_at = 1; // 新的过期时间
}

// 获取会话统计信息请求
message GetSessionStatsRequest {
  uint32 tenant_id = 1; // 租户ID(可选)
  string session_type = 2; // 会话类型(可选)
  google.protobuf.Timestamp start_time = 3; // 开始时间
  google.protobuf.Timestamp end_time = 4; // 结束时间
}

// 获取会话统计信息响应
message GetSessionStatsResponse {
  uint32 total_sessions = 1; // 总会话数
  uint32 active_sessions = 2; // 活跃会话数
  uint32 expired_sessions = 3; // 过期会话数
  uint32 terminated_sessions = 4; // 终止会话数
  map<string, uint32> sessions_by_type = 5; // 按类型统计
  map<uint32, uint32> sessions_by_tenant = 6; // 按租户统计
  repeated SessionTimeSeriesData time_series = 7; // 时间序列数据
}

// 会话时间序列数据
message SessionTimeSeriesData {
  google.protobuf.Timestamp timestamp = 1; // 时间戳
  uint32 active_count = 2; // 活跃数量
  uint32 new_count = 3; // 新增数量
  uint32 expired_count = 4; // 过期数量
}

// 强制终止会话请求
message ForceTerminateSessionRequest {
  string session_id = 1; // 会话ID
  string reason = 2; // 终止原因
}

// 批量终止会话请求
message BatchTerminateSessionsRequest {
  repeated string session_ids = 1; // 会话ID列表
  uint32 user_id = 2; // 用户ID(可选，终止指定用户的所有会话)
  uint32 tenant_id = 3; // 租户ID(可选，终止指定租户的所有会话)
  string session_type = 4; // 会话类型(可选，终止指定类型的所有会话)
  string reason = 5; // 终止原因
}

// 批量终止会话响应
message BatchTerminateSessionsResponse {
  uint32 terminated_count = 1; // 终止数量
  repeated string failed_session_ids = 2; // 失败的会话ID列表
}

// 获取会话活动日志请求
message GetSessionActivityLogsRequest {
  string session_id = 1; // 会话ID
  pagination.PagingRequest paging = 2; // 分页请求
  google.protobuf.Timestamp start_time = 3; // 开始时间
  google.protobuf.Timestamp end_time = 4; // 结束时间
}

// 获取会话活动日志响应
message GetSessionActivityLogsResponse {
  pagination.PagingResponse paging = 1; // 分页响应
  repeated SessionActivityLog logs = 2; // 日志列表
}

// 会话活动日志
message SessionActivityLog {
  string log_id = 1; // 日志ID
  string session_id = 2; // 会话ID
  uint32 user_id = 3; // 用户ID
  string activity_type = 4; // 活动类型
  string resource_type = 5; // 资源类型
  string resource_id = 6; // 资源ID
  string client_ip = 7; // 客户端IP
  google.protobuf.Timestamp timestamp = 8; // 时间戳
  google.protobuf.Struct details = 9; // 详情
}

// 设置会话属性请求
message SetSessionAttributeRequest {
  string session_id = 1; // 会话ID
  string key = 2; // 键
  string value = 3; // 值
}

// 获取会话属性请求
message GetSessionAttributeRequest {
  string session_id = 1; // 会话ID
  string key = 2; // 键
}

// 获取会话属性响应
message GetSessionAttributeResponse {
  string value = 1; // 值
}

// 删除会话属性请求
message DeleteSessionAttributeRequest {
  string session_id = 1; // 会话ID
  string key = 2; // 键
}