syntax = "proto3";

package api.user.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";

import "om-platform/pkg/utils/pagination/v1";

option go_package = "om-platform/api/user/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.service.v1";

// 用户服务
service UserService {
  // 查询用户列表
  rpc ListUser (pagination.PagingRequest) returns (ListUserResponse) {}

  // 查询用户详情
  rpc GetUser (GetUserRequest) returns (User) {}
  
  // 根据用户ID列表批量获取用户信息
  rpc BatchGetUsersByIds (BatchGetUsersByIdsRequest) returns (BatchGetUsersByIdsResponse) {}

  // 创建用户
  // 返回CreateUserResponse而不是Empty，以便提供新创建的用户ID
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}

  // 更新用户
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty) {}

  // 删除用户
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {}

  // 查询用户详情
  rpc GetUserByUserName (GetUserByUserNameRequest) returns (User) {}

  // 验证密码
  rpc VerifyPassword (VerifyPasswordRequest) returns (VerifyPasswordResponse) {}

  // 用户是否存在
  rpc UserExists (UserExistsRequest) returns (UserExistsResponse) {}
  
  // 获取用户角色列表
  rpc GetUserRoles (GetUserRolesRequest) returns (GetUserRolesResponse) {}
  
  // 分配用户角色
  rpc AssignUserRoles (AssignUserRolesRequest) returns (google.protobuf.Empty) {}
  
  // 撤销用户角色
  rpc RevokeUserRoles (RevokeUserRolesRequest) returns (google.protobuf.Empty) {}
  
  // 修改用户密码
  rpc ChangePassword (ChangePasswordRequest) returns (google.protobuf.Empty) {}
  
  // 重置用户密码
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse) {}
  
  // 获取用户有效权限
  rpc GetUserEffectivePermissions (GetUserEffectivePermissionsRequest) returns (GetUserEffectivePermissionsResponse) {}
  
  // 检查用户权限
  rpc CheckUserPermission (CheckUserPermissionRequest) returns (CheckUserPermissionResponse) {}
  
  // 清除用户权限缓存
  rpc ClearUserPermissionCache (ClearUserPermissionCacheRequest) returns (google.protobuf.Empty) {}
  
  // 获取用户动态角色
  rpc GetUserDynamicRoles (GetUserDynamicRolesRequest) returns (GetUserDynamicRolesResponse) {}
  
  // 获取用户权限审计日志
  rpc GetUserPermissionAuditLogs (GetUserPermissionAuditLogsRequest) returns (GetUserPermissionAuditLogsResponse) {}
}

// 验证密码结果码
enum VerifyPasswordResult {
  SUCCESS = 0;  // 验证成功
  ACCOUNT_NOT_EXISTS = 1; // 账号不存在
  WRONG_PASSWORD = 2;// 密码错误
  FREEZE = 3;// 已冻结
  DELETED = 4;// 已删除
}

// 用户权限
enum UserAuthority {
  SYS_ADMIN = 0;  // 系统超级用户
  SYS_MANAGER = 1;  // 系统管理员
  CUSTOMER_USER = 2;  // 普通用户
  GUEST_USER = 3;  // 游客

  REFRESH_TOKEN = 4; // 刷新令牌
}

// 用户性别
enum UserGender {
  SECRET = 0;  // 未知
  MALE = 1;     // 男性
  FEMALE = 2;   // 女性
}

// 用户状态
enum UserStatus {
  OFF = 0;
  ON = 1;
}

// 用户
message User {
  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "用户ID"}
  ];  // 用户ID

  repeated uint32 role_ids = 2 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];  // 角色ID列表
  optional uint32 work_id = 3 [json_name = "workId", (gnostic.openapi.v3.property) = {description: "工号"}];  // 工号
  optional uint32 org_id = 4 [json_name = "orgId", (gnostic.openapi.v3.property) = {description: "部门ID"}];  // 部门ID
  optional uint32 position_id = 5 [json_name = "positionId", (gnostic.openapi.v3.property) = {description: "岗位ID"}];  // 岗位ID
  optional uint32 permission_cache_ttl = 6 [json_name = "permissionCacheTtl", (gnostic.openapi.v3.property) = {description: "权限缓存生存时间(秒)"}]; // 权限缓存生存时间
  optional uint32 tenant_id = 9 [json_name = "tenantId", (gnostic.openapi.v3.property) = {description: "租户ID"}];  // 租户ID

  optional uint32 create_by = 7 [json_name = "createBy", (gnostic.openapi.v3.property) = {description: "创建者ID"}]; // 创建者ID
  optional uint32 update_by = 8 [json_name = "updateBy", (gnostic.openapi.v3.property) = {description: "更新者ID"}]; // 更新者ID

  optional string user_name = 10 [
    json_name = "userName",
    (gnostic.openapi.v3.property) = {description: "登录名"}
  ]; // 登录名

  optional string nick_name = 11 [
    json_name = "nickName",
    (gnostic.openapi.v3.property) = {description: "昵称"}
  ]; // 昵称

  optional string real_name = 12 [
    json_name = "realName",
    (gnostic.openapi.v3.property) = {description: "真实姓名"}
  ]; // 真实姓名

  optional string avatar = 13 [
    json_name = "avatar",
    (gnostic.openapi.v3.property) = {description: "头像"}
  ]; // 头像

  optional string email = 14 [
    json_name = "email",
    (gnostic.openapi.v3.property) = {description: "邮箱"}
  ]; // 邮箱

  optional string mobile = 15 [
    json_name = "mobile",
    (gnostic.openapi.v3.property) = {description: "手机号"}
  ]; // 手机号

  optional string telephone = 16 [
    json_name = "telephone",
    (gnostic.openapi.v3.property) = {description: "座机号"}
  ]; // 手机号

  optional UserGender gender = 17 [
    json_name = "gender",
    (gnostic.openapi.v3.property) = {description: "性别"}
  ]; // 性别

  optional string address = 18 [
    json_name = "address",
    (gnostic.openapi.v3.property) = {description: "住址"}
  ]; // 住址

  optional string region = 19 [
    json_name = "region",
    (gnostic.openapi.v3.property) = {description: "国家地区"}
  ]; // 国家地区

  optional string description = 20 [
    json_name = "description",
    (gnostic.openapi.v3.property) = {description: "个人描述"}
  ]; // 个人描述

  optional string remark = 21 [
    json_name = "remark",
    (gnostic.openapi.v3.property) = {description: "备注名"}
  ]; // 备注名

  optional int64 last_login_time = 30 [
    json_name = "lastLoginTime",
    (gnostic.openapi.v3.property) = {description: "最后登录时间"}
  ]; // 最后登录时间

  optional string last_login_ip = 31 [
    json_name = "lastLoginIp",
    (gnostic.openapi.v3.property) = {description: "最后登录IP"}
  ]; // 最后登录IP

  optional UserStatus status = 32 [(gnostic.openapi.v3.property) = {
    description: "用户状态"
    default: {string: "ON"}
    enum: [{yaml: "ON"}, {yaml: "OFF"}]
  }]; // 用户状态

  optional UserAuthority authority = 33 [(gnostic.openapi.v3.property) = {
    description: "权限"
    default: {string: "CUSTOMER_USER"}
  }]; // 权限

  repeated string roles = 34 [(gnostic.openapi.v3.property) = {
    description: "角色码"
  }]; // 角色码

  optional google.protobuf.Timestamp create_time = 200 [json_name = "createTime", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp update_time = 201 [json_name = "updateTime", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp delete_time = 202 [json_name = "deleteTime", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 获取用户列表 - 答复
message ListUserResponse {
  repeated User items = 1;
  uint32 total = 2;
}

// 获取用户数据 - 请求
message GetUserRequest {
  uint32 id = 1;
}

// 批量获取用户信息 - 请求
message BatchGetUsersByIdsRequest {
  repeated uint32 user_ids = 1 [
    (gnostic.openapi.v3.property) = {description: "用户ID列表"},
    json_name = "userIds"
  ]; // 用户ID列表
}

// 批量获取用户信息 - 响应
message BatchGetUsersByIdsResponse {
  repeated User users = 1 [
    (gnostic.openapi.v3.property) = {description: "用户信息列表"},
    json_name = "users"
  ]; // 用户信息列表
  
  // 未找到的用户ID列表
  repeated uint32 not_found_user_ids = 2 [
    (gnostic.openapi.v3.property) = {description: "未找到的用户ID列表"},
    json_name = "notFoundUserIds"
  ];
}

message GetUserByUserNameRequest {
  string user_name = 1 [
    (gnostic.openapi.v3.property) = {description: "用户登录名", read_only: true},
    json_name = "userName"
  ]; // 用户登录名
}

// 创建用户 - 请求
// 专注于用户基本信息管理，账户状态和安全由AccountService管理
message CreateUserRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID

  User data = 2; // 用户基本信息

  optional string password = 3 [
    (gnostic.openapi.v3.property) = {description: "用户登录密码", read_only: true},
    json_name = "password"
  ]; // 用户登录密码
  
  // 标记是否需要同时创建账户，如果为true，AccountService会接收到创建用户的事件并创建关联账户
  optional bool create_account = 4 [
    (gnostic.openapi.v3.property) = {description: "是否同时创建账户", default: {bool: true}},
    json_name = "createAccount"
  ]; // 是否同时创建账户
}

// 更新用户 - 请求
message UpdateUserRequest {
  optional uint32 operator_id = 1 [
    json_name = "operatorId",
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true}
  ]; // 操作用户ID

  User data = 2 [
    json_name = "data",
    (google.api.field_behavior) = REQUIRED,
    (gnostic.openapi.v3.property) = {description: "用户的数据"}
  ]; // 用户的数据

  optional string password = 3 [
    (gnostic.openapi.v3.property) = {description: "用户登录密码", read_only: true},
    json_name = "password"
  ]; // 用户登录密码

  google.protobuf.FieldMask update_mask = 4 [
    json_name = "updateMask",
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realName,userName"}
    }
  ]; // 要更新的字段列表

  optional bool allow_missing = 5 [
    json_name = "allowMissing",
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"}
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 创建用户 - 响应
message CreateUserResponse {
  uint32 user_id = 1 [
    (gnostic.openapi.v3.property) = {description: "新创建的用户ID"},
    json_name = "userId"
  ]; // 新创建的用户ID
  
  google.protobuf.Timestamp created_at = 2 [
    json_name = "createdAt",
    (gnostic.openapi.v3.property) = {description: "创建时间"}
  ]; // 创建时间
}

// 删除用户 - 请求
message DeleteUserRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID

  uint32 id = 2;
}

// 验证密码 - 请求
message VerifyPasswordRequest {
  string user_name = 1 [
    (gnostic.openapi.v3.property) = {description: "用户登录名", read_only: true},
    json_name = "userName"
  ]; // 用户登录名

  string password = 2 [
    (gnostic.openapi.v3.property) = {description: "用户登录密码", read_only: true},
    json_name = "password"
  ]; // 用户登录密码
}
// 验证密码 - 答复
message VerifyPasswordResponse {
  VerifyPasswordResult result = 1;
}

// 用户是否存在 - 请求
message UserExistsRequest {
  string user_name = 1 [
    (gnostic.openapi.v3.property) = {description: "用户登录名", read_only: true},
    json_name = "userName"
  ]; // 用户登录名
}
// 用户是否存在 - 答复
message UserExistsResponse {
  bool exist = 1;
}

// 获取用户角色列表 - 请求
message GetUserRolesRequest {
  uint32 user_id = 1 [json_name = "userId", (gnostic.openapi.v3.property) = {description: "用户ID"}];
}

// 用户角色信息（简化版，避免循环依赖）
message UserRole {
  uint32 id = 1;
  string name = 2;
  string code = 3;
  string status = 4;
  string remark = 5;
}

// 获取用户角色列表 - 响应
message GetUserRolesResponse {
  repeated UserRole roles = 1;
}

// 分配用户角色 - 请求
message AssignUserRolesRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID
  
  uint32 user_id = 2 [json_name = "userId", (gnostic.openapi.v3.property) = {description: "用户ID"}];
  repeated uint32 role_ids = 3 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];
}

// 撤销用户角色 - 请求
message RevokeUserRolesRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID
  
  uint32 user_id = 2 [json_name = "userId", (gnostic.openapi.v3.property) = {description: "用户ID"}];
  repeated uint32 role_ids = 3 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];
}

// 修改用户密码 - 请求
message ChangePasswordRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID
  
  uint32 user_id = 2 [json_name = "userId", (gnostic.openapi.v3.property) = {description: "用户ID"}];
  string old_password = 3 [json_name = "oldPassword", (gnostic.openapi.v3.property) = {description: "旧密码"}];
  string new_password = 4 [json_name = "newPassword", (gnostic.openapi.v3.property) = {description: "新密码"}];
}

// 重置用户密码 - 请求
message ResetPasswordRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID
  
  uint32 user_id = 2 [json_name = "userId", (gnostic.openapi.v3.property) = {description: "用户ID"}];
}

// 重置用户密码 - 响应
message ResetPasswordResponse {
  string password = 1 [json_name = "password", (gnostic.openapi.v3.property) = {description: "重置后的密码"}];
}

// 获取用户有效权限 - 请求
message GetUserEffectivePermissionsRequest {
  uint32 user_id = 1 [json_name = "userId"];
  optional string resource_type = 2 [json_name = "resourceType"]; // 可选，按资源类型过滤
  bool skip_cache = 3 [json_name = "skipCache"]; // 是否跳过缓存，强制重新计算权限
}

// 获取用户有效权限 - 响应
message GetUserEffectivePermissionsResponse {
  repeated api.user.service.v1.Permission permissions = 1;
  map<string, bool> permission_map = 2 [json_name = "permissionMap"]; // 权限编码到布尔值的映射，方便客户端快速查询
}

// 检查用户权限 - 请求
message CheckUserPermissionRequest {
  uint32 user_id = 1 [json_name = "userId"];
  string resource_identifier = 2 [json_name = "resourceIdentifier"];
  string action = 3;
  map<string, string> context = 4; // 上下文信息，用于条件表达式求值
  bool skip_cache = 5 [json_name = "skipCache"]; // 是否跳过缓存，强制重新检查权限
}

// 检查用户权限 - 响应
message CheckUserPermissionResponse {
  bool has_permission = 1 [json_name = "hasPermission"];
  string deny_reason = 2 [json_name = "denyReason"];
  uint32 matched_permission_id = 3 [json_name = "matchedPermissionId"];
  bool from_cache = 4 [json_name = "fromCache"]; // 结果是否来自缓存
}

// 清除用户权限缓存 - 请求
message ClearUserPermissionCacheRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID
  
  optional uint32 user_id = 2 [json_name = "userId"]; // 指定用户ID，为空则清除所有用户的权限缓存
  optional string resource_type = 3 [json_name = "resourceType"]; // 指定资源类型，为空则不按资源类型过滤
}

// 获取用户动态角色 - 请求
message GetUserDynamicRolesRequest {
  uint32 user_id = 1 [json_name = "userId"];
  bool evaluate_conditions = 2 [json_name = "evaluateConditions"]; // 是否评估动态条件
  map<string, string> context = 3; // 上下文信息，用于条件表达式求值
}

// 获取用户动态角色 - 响应
message GetUserDynamicRolesResponse {
  repeated api.user.service.v1.Role roles = 1;
  map<uint32, bool> condition_results = 2 [json_name = "conditionResults"]; // 角色ID到条件评估结果的映射
}

// 获取用户权限审计日志 - 请求
message GetUserPermissionAuditLogsRequest {
  uint32 user_id = 1 [json_name = "userId"];
  optional google.protobuf.Timestamp start_time = 2 [json_name = "startTime"]; // 开始时间
  optional google.protobuf.Timestamp end_time = 3 [json_name = "endTime"]; // 结束时间
  optional string operation_type = 4 [json_name = "operationType"]; // 操作类型
  int32 page_size = 5 [json_name = "pageSize"]; // 分页大小
  int32 page_num = 6 [json_name = "pageNum"]; // 页码
}

// 获取用户权限审计日志 - 响应
message GetUserPermissionAuditLogsResponse {
  repeated api.user.service.v1.OperationLog logs = 1;
  int32 total = 2; // 总记录数
}